shared/lightwave/src/lwo2.h

/* generic linked list */

typedef struct st_lwNode {
   struct st_lwNode *next, *prev;
   void *data;
} lwNode;
/* plug-in reference */

typedef struct st_lwPlugin {
   struct st_lwPlugin *next, *prev;
   char          *ord;
   char          *name;
   int            flags;
   void          *data;
} lwPlugin;
/* envelopes */

typedef struct st_lwKey {
   struct st_lwKey *next, *prev;
   float          value;
   float          time;
   unsigned int   shape;               /* ID_TCB, ID_BEZ2, etc. */
   float          tension;
   float          continuity;
   float          bias;
   float          param[ 4 ];
} lwKey;
typedef struct st_lwEnvelope {
   struct st_lwEnvelope *next, *prev;
   int            index;
   int            type;
   char          *name;
   lwKey         *key;                 /* linked list of keys */
   int            nkeys;
   int            behavior[ 2 ];       /* pre and post (extrapolation) */
   lwPlugin      *cfilter;             /* linked list of channel filters */
   int            ncfilters;
} lwEnvelope;
#define BEH_RESET      0
#define BEH_CONSTANT   1
#define BEH_REPEAT     2
#define BEH_OSCILLATE  3
#define BEH_OFFSET     4
#define BEH_LINEAR     5
/* values that can be enveloped */

typedef struct st_lwEParam {
   float          val;
   int            eindex;
} lwEParam;
typedef struct st_lwVParam {
   float          val[ 3 ];
   int            eindex;
} lwVParam;
/* clips */

typedef struct st_lwClipStill {
   char          *name;
} lwClipStill;
typedef struct st_lwClipSeq {
   char          *prefix;              /* filename before sequence digits */
   char          *suffix;              /* after digits, e.g. extensions */
   int            digits;
   int            flags;
   int            offset;
   int            start;
   int            end;
} lwClipSeq;
typedef struct st_lwClipAnim {
   char          *name;
   char          *server;              /* anim loader plug-in */
   void          *data;
} lwClipAnim;
typedef struct st_lwClipXRef {
   char          *string;
   int            index;
   struct st_lwClip *clip;
} lwClipXRef;
typedef struct st_lwClipCycle {
   char          *name;
   int            lo;
   int            hi;
} lwClipCycle;
typedef struct st_lwClip {
   struct st_lwClip *next, *prev;
   int            index;
   unsigned int   type;                /* ID_STIL, ID_ISEQ, etc. */
   union {
      lwClipStill    still;
      lwClipSeq      seq;
      lwClipAnim     anim;
      lwClipXRef     xref;
      lwClipCycle    cycle;
   }              source;
   float          start_time;
   float          duration;
   float          frame_rate;
   lwEParam       contrast;
   lwEParam       brightness;
   lwEParam       saturation;
   lwEParam       hue;
   lwEParam       gamma;
   int            negative;
   lwPlugin      *ifilter;             /* linked list of image filters */
   int            nifilters;
   lwPlugin      *pfilter;             /* linked list of pixel filters */
   int            npfilters;
} lwClip;
/* textures */

typedef struct st_lwTMap {
   lwVParam       size;
   lwVParam       center;
   lwVParam       rotate;
   lwVParam       falloff;
   int            fall_type;
   char          *ref_object;
   int            coord_sys;
} lwTMap;
typedef struct st_lwImageMap {
   int            cindex;
   int            projection;
   char          *vmap_name;
   int            axis;
   int            wrapw_type;
   int            wraph_type;
   lwEParam       wrapw;
   lwEParam       wraph;
   float          aa_strength;
   int            aas_flags;
   int            pblend;
   lwEParam       stck;
   lwEParam       amplitude;
} lwImageMap;
#define PROJ_PLANAR       0
#define PROJ_CYLINDRICAL  1
#define PROJ_SPHERICAL    2
#define PROJ_CUBIC        3
#define PROJ_FRONT        4
#define WRAP_NONE    0
#define WRAP_EDGE    1
#define WRAP_REPEAT  2
#define WRAP_MIRROR  3
typedef struct st_lwProcedural {
   int            axis;
   float          value[ 3 ];
   char          *name;
   void          *data;
} lwProcedural;
typedef struct st_lwGradKey {
   struct st_lwGradKey *next, *prev;
   float          value;
   float          rgba[ 4 ];
} lwGradKey;
typedef struct st_lwGradient {
   char          *paramname;
   char          *itemname;
   float          start;
   float          end;
   int            repeat;
   lwGradKey     *key;                 /* array of gradient keys */
   short         *ikey;                /* array of interpolation codes */
} lwGradient;
typedef struct st_lwTexture {
   struct st_lwTexture *next, *prev;
   char          *ord;
   unsigned int   type;
   unsigned int   chan;
   lwEParam       opacity;
   short          opac_type;
   short          enabled;
   short          negative;
   short          axis;
   union {
      lwImageMap     imap;
      lwProcedural   proc;
      lwGradient     grad;
   }              param;
   lwTMap         tmap;
} lwTexture;
/* values that can be textured */

typedef struct st_lwTParam {
   float          val;
   int            eindex;
   lwTexture     *tex;                 /* linked list of texture layers */
} lwTParam;
typedef struct st_lwCParam {
   float          rgb[ 3 ];
   int            eindex;
   lwTexture     *tex;                 /* linked list of texture layers */
} lwCParam;
/* surfaces */

typedef struct st_lwGlow {
   short          enabled;
   short          type;
   lwEParam       intensity;
   lwEParam       size;
} Glow;
typedef struct st_lwRMap {
   lwTParam       val;
   int            options;
   int            cindex;
   float          seam_angle;
} lwRMap;
typedef struct st_lwLine {
   short          enabled;
   unsigned short flags;
   lwEParam       size;
} lwLine;
typedef struct st_lwSurface {
   struct st_lwSurface *next, *prev;
   char          *name;
   char          *srcname;
   lwCParam       color;
   lwTParam       luminosity;
   lwTParam       diffuse;
   lwTParam       specularity;
   lwTParam       glossiness;
   lwRMap         reflection;
   lwRMap         transparency;
   lwTParam       eta;
   lwTParam       translucency;
   lwTParam       bump;
   float          smooth;
   int            sideflags;
   float          alpha;
   int            alpha_mode;
   lwEParam       color_hilite;
   lwEParam       color_filter;
   lwEParam       add_trans;
   lwEParam       dif_sharp;
   lwEParam       glow;
   lwLine         line;
   lwPlugin      *shader;              /* linked list of shaders */
   int            nshaders;
} lwSurface;
/* vertex maps */

typedef struct st_lwVMap {
   struct st_lwVMap *next, *prev;
   char          *name;
   unsigned int   type;
   int            dim;
   int            nverts;
   int            perpoly;
   int           *vindex;              /* array of point indexes */
   int           *pindex;              /* array of polygon indexes */
   float        **val;
} lwVMap;
typedef struct st_lwVMapPt {
   lwVMap        *vmap;
   int            index;               /* vindex or pindex element */
} lwVMapPt;
/* points and polygons */

typedef struct st_lwPoint {
   float          pos[ 3 ];
   int            npols;               /* number of polygons sharing the point */
   int           *pol;                 /* array of polygon indexes */
   int            nvmaps;
   lwVMapPt      *vm;                  /* array of vmap references */
} lwPoint;
typedef struct st_lwPolVert {
   int            index;               /* index into the point array */
   float          norm[ 3 ];
   int            nvmaps;
   lwVMapPt      *vm;                  /* array of vmap references */
} lwPolVert;
typedef struct st_lwPolygon {
   lwSurface     *surf;
   int            part;                /* part index */
   int            smoothgrp;           /* smoothing group */
   int            flags;
   unsigned int   type;
   float          norm[ 3 ];
   int            nverts;
   lwPolVert     *v;                   /* array of vertex records */
} lwPolygon;
typedef struct st_lwPointList {
   int            count;
   int            offset;              /* only used during reading */
   lwPoint       *pt;                  /* array of points */
} lwPointList;
typedef struct st_lwPolygonList {
   int            count;
   int            offset;              /* only used during reading */
   int            vcount;              /* total number of vertices */
   int            voffset;             /* only used during reading */
   lwPolygon     *pol;                 /* array of polygons */
} lwPolygonList;
/* geometry layers */

typedef struct st_lwLayer {
   struct st_lwLayer *next, *prev;
   char          *name;
   int            index;
   int            parent;
   int            flags;
   float          pivot[ 3 ];
   float          bbox[ 6 ];
   lwPointList    point;
   lwPolygonList  polygon;
   int            nvmaps;
   lwVMap        *vmap;                /* linked list of vmaps */
} lwLayer;
/* tag strings */

typedef struct st_lwTagList {
   int            count;
   int            offset;              /* only used during reading */
   char         **tag;                 /* array of strings */
} lwTagList;
/* an object */

typedef struct st_lwObject {
   lwLayer       *layer;               /* linked list of layers */
   lwEnvelope    *env;                 /* linked list of envelopes */
   lwClip        *clip;                /* linked list of clips */
   lwSurface     *surf;                /* linked list of surfaces */
   lwTagList      taglist;
   int            nlayers;
   int            nenvs;
   int            nclips;
   int            nsurfs;
} lwObject;
/* lwo2.c */

void lwFreeLayer( lwLayer *layer );
void lwFreeObject( lwObject *object );
lwObject *lwGetObject( char *filename, unsigned int *failID, int *failpos );
/* pntspols.c */

void lwFreePoints( lwPointList *point );
void lwFreePolygons( lwPolygonList *plist );
int lwGetPoints( FILE *fp, int cksize, lwPointList *point );
void lwGetBoundingBox( lwPointList *point, float bbox[] );
int lwAllocPolygons( lwPolygonList *plist, int npols, int nverts );
int lwGetPolygons( FILE *fp, int cksize, lwPolygonList *plist, int ptoffset );
void lwGetPolyNormals( lwPointList *point, lwPolygonList *polygon );
int lwGetPointPolygons( lwPointList *point, lwPolygonList *polygon );
int lwResolvePolySurfaces( lwPolygonList *polygon, lwTagList *tlist,
   lwSurface **surf, int *nsurfs );
void lwGetVertNormals( lwPointList *point, lwPolygonList *polygon );
void lwFreeTags( lwTagList *tlist );
int lwGetTags( FILE *fp, int cksize, lwTagList *tlist );
int lwGetPolygonTags( FILE *fp, int cksize, lwTagList *tlist,
   lwPolygonList *plist );
/* vmap.c */

void lwFreeVMap( lwVMap *vmap );
lwVMap *lwGetVMap( FILE *fp, int cksize, int ptoffset, int poloffset,
   int perpoly );
int lwGetPointVMaps( lwPointList *point, lwVMap *vmap );
int lwGetPolyVMaps( lwPolygonList *polygon, lwVMap *vmap );
/* clip.c */

void lwFreeClip( lwClip *clip );
lwClip *lwGetClip( FILE *fp, int cksize );
lwClip *lwFindClip( lwClip *list, int index );
/* envelope.c */

void lwFreeEnvelope( lwEnvelope *env );
lwEnvelope *lwGetEnvelope( FILE *fp, int cksize );
lwEnvelope *lwFindEnvelope( lwEnvelope *list, int index );
float lwEvalEnvelope( lwEnvelope *env, float time );
/* surface.c */

void lwFreePlugin( lwPlugin *p );
void lwFreeTexture( lwTexture *t );
void lwFreeSurface( lwSurface *surf );
int lwGetTHeader( FILE *fp, int hsz, lwTexture *tex );
int lwGetTMap( FILE *fp, int tmapsz, lwTMap *tmap );
int lwGetImageMap( FILE *fp, int rsz, lwTexture *tex );
int lwGetProcedural( FILE *fp, int rsz, lwTexture *tex );
int lwGetGradient( FILE *fp, int rsz, lwTexture *tex );
lwTexture *lwGetTexture( FILE *fp, int bloksz, unsigned int type );
lwPlugin *lwGetShader( FILE *fp, int bloksz );
lwSurface *lwGetSurface( FILE *fp, int cksize );
lwSurface *lwDefaultSurface( void );
/* lwob.c */

lwSurface *lwGetSurface5( FILE *fp, int cksize, lwObject *obj );
int lwGetPolygons5( FILE *fp, int cksize, lwPolygonList *plist, int ptoffset );
lwObject *lwGetObject5( char *filename, unsigned int *failID, int *failpos );
/* list.c */

void lwListFree( void *list, void ( *freeNode )( void * ));
void lwListAdd( void **list, void *node );
void lwListInsert( void **vlist, void *vitem,
   int ( *compare )( void *, void * ));
/* vecmath.c */

float dot( float a[], float b[] );
void cross( float a[], float b[], float c[] );